k8s/deployment.yaml
apiVersion: apps/v1 # до версии 1.9.0 нужно использовать apps/v1beta2
kind: Deployment
metadata:
  name: cats-api
  labels:
    app: cats-api
spec:
  selector:
    matchLabels:
      app: cats-api
  replicas: 2 # запускает 2 пода, созданных по шаблону
  template:
    metadata:
      labels:
        app: cats-api
    spec:
      containers:
        - name: cats-api
          image: 482211/cats-api:1.0.0
          ports:
            - containerPort: 8080
